2010-08-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextField.m (-selectText:): Add special case to
	preserve the current X selection when editing is started with a
	mouse click.

	* Source/NSSpellChecker.m (-awakeFromNib): Make the spell panel a
	utility window like the font and color panels.

	* Source/NSPopUpButtonCell.m (-selectItem): Fix bug caused by the
	fix for #30025, which made it impossible to programmatically
	change the selected item of some pop up buttons.

	* Source/NSComboBoxCell.m (-runLoopWithComboBoxCell:): Dismiss
	the combo box's list without changing the selection when the user
	presses Escape.

2010-08-13 Riccardo Mottola

	* Source/NSMatrix.m
	cleaned up code

2010-08-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSComboBox.m (-textView:doCommandBySelector:): New
	override to pop up the combo box's list when the user presses
	the down arrow key.
	* Source/NSComboBoxCell.m (_performClickWithFrame:inView:):
	Remember the cell's control view.

2010-08-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-setPullsDown:): Call
	synchronizeTitleAndSelectedItem to display the correct item.
	* Source/NSPopUpButtonCell.m (-setMenu:): Listen to notifications
	from the menu to call synchronizeTitleAndSelectedItem, when the
	menu items change.

2010-08-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSTextStorage.m: Follow Richard's changes to
	GSAttributedString in base.

2010-08-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-arrangeInFront:): Only order
	non-miniaturized windows front.

2010-08-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-draggingEntered:, -draggingUpdated): Fix
	an incorrect range check which prevented the user from copying or
	moving the current selection immediately before itself with a DnD
	operation.

2010-08-03  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSColorPanel.m:
	* Source/NSFontPanel.m: